fix overflow

--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -20,7 +20,7 @@
     position: relative;
     background-position: center center;
     height: 100vh;
-
+    overflow: hidden;
     &__title {
         font-size: 4.375rem;
         font-weight: 500;
